--- a/jenkins/k8s/service_jenkins.yaml
+++ b/jenkins/k8s/service_jenkins.yaml
@@ -19,7 +19,7 @@
     name: jenkins-ui
     namespace: jenkins
   spec:
-    type: NodePort
+    type: LoadBalancer
     selector:
       app: master
     ports:
