--- a/sample-app/k8s/production/frontend-production.yaml
+++ b/sample-app/k8s/production/frontend-production.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: gcr.io/cloud-solutions-images/gceme:1.0.0
+        image: sdadlani311/gceme:1.0.0
         resources:
           limits:
             memory: "500Mi"
