--- a/sample-app/Jenkinsfile
+++ b/sample-app/Jenkinsfile
@@ -9,7 +9,7 @@ node {
   stage "Deploy Application"
   switch (env.BRANCH_NAME) {
     // Roll out to production
-    case "master":
+    case "canary":
         // Change deployed image in canary to the one we just built
         sh("sed -i.bak 's#sdadlani311/gceme:1.0.0#${imageTag}#' ./k8s/production/*.yaml")
         sh("kubectl --namespace=production apply -f k8s/services/")
