--- a/sample-app/Jenkinsfile
+++ b/sample-app/Jenkinsfile
@@ -4,21 +4,23 @@ node {
   def feSvcName = "${appName}-frontend"
   def imageTag = "sdadlani311/${appName}:${env.BRANCH_NAME}.${env.BUILD_NUMBER}"
 
-  checkout scm
 
-  stage 'Build image'
-  sh("docker build -t ${imageTag} .")
+  dir('sample-app') { 
+    checkout scm
 
-  stage 'Run Go tests'
-  sh("docker run ${imageTag} go test")
+    stage ('Build image')
+      sh("docker build -t ${imageTag} .")
 
-  stage 'Push image to registry'
-  sh("gcloud docker -- push ${imageTag}")
+    stage ('Run Go tests')
+      sh("docker run ${imageTag} go test")
 
-  stage "Deploy Application"
-  switch (env.BRANCH_NAME) {
-    // Roll out to canary environment
-    case "canary":
+    //stage ('Push image to registry')
+    //  sh("gcloud docker -- push ${imageTag}")
+
+    stage ("Deploy Application")
+      switch (env.BRANCH_NAME) {
+      // Roll out to canary environment
+        case "canary":
         // Change deployed image in canary to the one we just built
         sh("sed -i.bak 's#sdadlani311/gceme:1.0.0#${imageTag}#' ./k8s/canary/*.yaml")
         sh("kubectl --namespace=production apply -f k8s/services/")
@@ -26,8 +28,8 @@ node {
         sh("echo http://`kubectl --namespace=production get service/${feSvcName} --output=json | jq -r '.status.loadBalancer.ingress[0].ip'` > ${feSvcName}")
         break
 
-    // Roll out to production
-    case "master":
+        // Roll out to production
+        case "master":
         // Change deployed image in canary to the one we just built
         sh("sed -i.bak 's#sdadlani311/gceme:1.0.0#${imageTag}#' ./k8s/production/*.yaml")
         sh("kubectl --namespace=production apply -f k8s/services/")
@@ -46,5 +48,6 @@ node {
         sh("kubectl --namespace=${env.BRANCH_NAME} apply -f k8s/dev/")
         echo 'To access your environment run `kubectl proxy`'
         echo "Then access your service via http://localhost:8001/api/v1/proxy/namespaces/${env.BRANCH_NAME}/services/${feSvcName}:80/"
+    }
   }
 }
