--- a/sample-app/Jenkinsfile
+++ b/sample-app/Jenkinsfile
@@ -4,20 +4,20 @@ node {
   def feSvcName = "${appName}-frontend"
   def imageTag = "sdadlani311/${appName}:${env.BRANCH_NAME}.${env.BUILD_NUMBER}"
 
+  checkout scm
 
-  dir('sample-app') { 
-    checkout scm
-
-    stage ('Build image')
+  dir('sample-app') {
+    stage ('Build image') {
       sh("docker build -t ${imageTag} .")
-
-    stage ('Run Go tests')
+    }
+    stage ('Run Go tests') {
       sh("docker run ${imageTag} go test")
+    }
 
     //stage ('Push image to registry')
     //  sh("gcloud docker -- push ${imageTag}")
 
-    stage ("Deploy Application")
+    stage ("Deploy Application") {
       switch (env.BRANCH_NAME) {
       // Roll out to canary environment
         case "canary":
@@ -37,8 +37,8 @@ node {
         sh("echo http://`kubectl --namespace=production get service/${feSvcName} --output=json | jq -r '.status.loadBalancer.ingress[0].ip'` > ${feSvcName}")
         break
 
-    // Roll out a dev environment
-    default:
+      // Roll out a dev environment
+      default:
         // Create namespace if it doesn't exist
         sh("kubectl get ns ${env.BRANCH_NAME} || kubectl create ns ${env.BRANCH_NAME}")
         // Don't use public load balancing for development branches
@@ -48,6 +48,7 @@ node {
         sh("kubectl --namespace=${env.BRANCH_NAME} apply -f k8s/dev/")
         echo 'To access your environment run `kubectl proxy`'
         echo "Then access your service via http://localhost:8001/api/v1/proxy/namespaces/${env.BRANCH_NAME}/services/${feSvcName}:80/"
+      }
     }
   }
 }
