--- a/sample-app/Jenkinsfile
+++ b/sample-app/Jenkinsfile
@@ -8,6 +8,7 @@ node {
 
   dir('sample-app') {
     stage ('Build image') {
+      sh("whoami")
       sh("docker build -t ${imageTag} .")
     }
     stage ('Run Go tests') {
