--- a/sample-app/Jenkinsfile
+++ b/sample-app/Jenkinsfile
@@ -8,7 +8,8 @@ node {
 
   dir('sample-app') {
     stage ('Build image') {
-      sh("sudo docker build -t ${imageTag} .")
+      sh('sleep 10m')
+      sh("docker build -t ${imageTag} .")
     }
     stage ('Run Go tests') {
       sh("docker run ${imageTag} go test")
